<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img1"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtvwinsiranomepet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/insira_nome"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtnomepet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#9CBCB6"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwinsiranomepet" />

    <RadioGroup
        android:id="@+id/rdggeneros"
        android:layout_width="211dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtnomepet">

        <RadioButton
            android:id="@+id/rdbmasculino"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:buttonTint="#9CBCB6"
            android:fontFamily="sans-serif-medium"
            android:text="@string/genero_macho" />

        <RadioButton
            android:id="@+id/rdbfeminino"
            android:layout_width="99dp"
            android:layout_height="match_parent"
            android:buttonTint="#9CBCB6"
            android:fontFamily="sans-serif-medium"
            android:text="@string/genero_femea" />

    </RadioGroup>

    <TextView
        android:id="@+id/txtvwinsiracpftutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/insira_cpf"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rdggeneros" />

    <EditText
        android:id="@+id/edtnumcpftutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#9CBCB6"
        android:ems="10"
        android:fontFamily="sans-serif-medium"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtvwinsiracpftutor" />

    <Button
        android:id="@+id/btncontinuar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#9CBCB6"
        android:fontFamily="sans-serif-medium"
        android:onClick="Transferir"
        android:text="@string/btn_continuar"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.275"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtnumcpftutor"
        app:layout_constraintVertical_bias="0.019" />

</androidx.constraintlayout.widget.ConstraintLayout>